# Konstructor

./: CMakeLists.txt  CodeStyle.md  Czech.ts  Dialogs.cmake  Konstructor.pro  Plane.cmake  README.md  Settings.cpp  Settings.h  Space.cmake  ViewWidget.cpp  ViewWidget.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  shaders.qrc
2D/: ViewWidget.cpp  ViewWidget.h
ClassRepository/: GlobalVariables.cpp  Plane.cpp  Plane.h  Settings.cpp  Settings.h  Vector.h
ClassRepository/Drawables/: Circle.cpp  Circle.h  DrawableObject.cpp  DrawableObject.h  Line.cpp  Line.h  Point.cpp  Point.h
include/delaunator/: delaunator.cpp  delaunator.h
include/libigl/include/igl/: AABB.h  AtA_cached.h  Camera.h  HalfEdgeIterator.h  LinSpaced.h  SortableRow.h  WindingNumberTree.h  accumarray.h  active_set.h  adjacency_list.h  adjacency_matrix.h  all.h  all_pairs_distances.cpp  ambient_occlusion.h  angular_distance.h  any.h  any_of.cpp  arap.h  arap_dof.h  arap_linear_block.cpp  arap_linear_block.h  arap_rhs.h  average_from_edges_onto_vertices.h  average_onto_faces.h  average_onto_vertices.h  avg_edge_length.h  barycenter.h  barycentric_coordinates.h  barycentric_interpolation.h  bbw.cpp  bbw.h  bezier.h  bfs.h  bfs_orient.cpp  bfs_orient.h  biharmonic_coordinates.cpp  biharmonic_coordinates.h  bijective_composite_harmonic_mapping.h  blkdiag.h  blue_noise.h  (+382 more)
include/libigl/tests/: test_common.h
include/libigl/tutorial/303_LaplaceEquation/: main.cpp
include/libigl/tutorial/304_LinearEqualityConstraints/: main.cpp
include/libigl/tutorial/305_QuadraticProgramming/: main.cpp
include/libigl/tutorial/306_EigenDecomposition/: main.cpp
include/libigl/tutorial/403_BoundedBiharmonicWeights/: main.cpp
include/libigl/tutorial/404_DualQuaternionSkinning/: main.cpp
src/: ExtrusionDialog.cpp  ExtrusionDialog.h  ExtrusionDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessagesManager.cpp  MessagesManager.h  PlaneWidget.cpp  PlaneWidget.h  PointPositionDialog.cpp  PointPositionDialog.h  PopUpMessage.h  PopUpMessage.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SpaceWidget.cpp  SpaceWidget.h  View3DWidget.cpp  View3DWidget.h  ViewWidget.cpp  ViewWidget.h  WelcomeDialog.cpp  WelcomeDialog.h  WelcomeDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Adapters/: PointAdapter.h  Polygonator.cpp  Polygonator.h
src/Base/: GlobalVariables.h  Settings.cpp  Settings.h
src/ClassRepository/: DrawablesFactory.cpp  DrawablesFactory.h  GlobalVariables.cpp  GlobalVariables.h  QGraphicsViewUserInput.cpp  QGraphicsViewUserInput.h  Settings.cpp  Settings.h  UserInputRequester.cpp  UserInputRequester.h  Vector.h
src/ClassRepository/2D/: DrawablesFactory.h  UserInputRequester.h
src/ClassRepository/3D/: Item.cpp  Item.h  Mesh.cpp  Mesh.h
src/ClassRepository/Adapters/: LineAdapter.cpp  LineAdapter.h  PointAdapter.cpp  PointAdapter.h  Polygonator.cpp  Polygonator.h
src/ClassRepository/Drawables/: Circle.cpp  Circle.h  DrawableObject.cpp  DrawableObject.h  Label.cpp  Label.h  Line.cpp  Line.h  Point.cpp  Point.h
src/ClassRepository/Exceptions/: DrawableAlreadyRestrainedException.cpp  DrawableAlreadyRestrainedException.h
src/ClassRepository/Plane/: Factory.cpp  Factory.h  Plane  QGraphicsViewUserInput.cpp  QGraphicsViewUserInput.h  Style.h  UserInputRequester.h
src/ClassRepository/Space/: Camera.h  Item.cpp  Item.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Space  SpaceFactory.cpp  SpaceFactory.h  Transform3D.cpp  Transform3D.h  Vertex.h
src/ClassRepository/Tools/: CircleTool.cpp  CircleTool.h  DimensionTool.cpp  DimensionTool.h  LabelTool.cpp  LabelTool.h  LineTool.cpp  LineTool.h  RectangleTool.cpp  RectangleTool.h  Tool.cpp  Tool.h
src/ClassRepository/Tools3D/: DrawTool.cpp  DrawTool.h  Tool3D.cpp  Tool3D.h
src/Dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ExtrusionDialog.cpp  ExtrusionDialog.h  ExtrusionDialog.ui  MessagesManager.h  PointPositionDialog.h  PointPositionDialog.ui  PopUpMessage.cpp  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  WelcomeDialog.cpp  WelcomeDialog.h  WelcomeDialog.ui
src/Plane/: Factory.cpp  Factory.h  Plane  Plane.h  PlaneFactory.cpp  PlaneFactory.h  QGraphicsViewUserInput.cpp  QGraphicsViewUserInput.h
src/Plane/Drawables/: Arc.cpp  Arc.h  Circle.cpp  Circle.h  DrawableObject.cpp  DrawableObject.h  Drawables.h  Label.cpp  Label.h  Line.cpp  Line.h  Point.cpp  Point.h
src/Plane/Tools/: ArcTool.cpp  ArcTool.h  CircleTool.cpp  CircleTool.h  DimensionTool.cpp  DimensionTool.h  ExpandPolygonTool.cpp  ExpandPolygonTool.h  LabelTool.cpp  LabelTool.h  LineCenterTool.cpp  LineCenterTool.h  LineLengthConstrainTool.cpp  LineLengthConstrainTool.h  LineTool.cpp  LineTool.h  LockPositionTool.cpp  LockPositionTool.h  PointPositionTool.cpp  PointPositionTool.h  RectangleTool.cpp  RectangleTool.h  Tool.h  Tools.h
src/Space/: Camera.cpp  Item.cpp  Item.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Space.h  SpaceFactory.cpp  SpaceFactory.h  SpaceProcessor.cpp  SpaceProcessor.h  Vertex.h
src/shaders/: item.frag  item.vert  planes.frag  planes.vert  simple.frag  simple.vert
(+244 files in other folders)
